--- a/2018_US_Bikeshare_Analysis.ipynb
+++ b/2018_US_Bikeshare_Analysis.ipynb
@@ -130,7 +130,7 @@
     "    return (city, first_trip)\n",
     "\n",
     "# list of files for each city\n",
-    "data_files = ['./data/NYC-CitiBike-2018.csv',\n",
+    "data_files = ['./data/nycbike2018.csv',\n",
     "              './data/Chicago-Divvy-2018.csv',\n",
     "              './data/Washington-CapitalBikeshare-2018.csv',]\n",
     "\n",
@@ -424,12 +424,12 @@
    ],
    "source": [
     "# Run this cell to check your work\n",
-    "city_info = {'Washington': {'in_file': './data/Washington-CapitalBikeshare-2018.csv',\n",
-    "                            'out_file': './data/Washington-2018-Summary.csv'},\n",
-    "             'Chicago': {'in_file': './data/Chicago-Divvy-2018.csv',\n",
-    "                         'out_file': './data/Chicago-2018-Summary.csv'},\n",
-    "             'NYC': {'in_file': './data/NYC-CitiBike-2018.csv',\n",
-    "                     'out_file': './data/NYC-2018-Summary.csv'}}\n",
+    "city_info = {'Washington': {'in_file': './data/wadccapital18.csv',\n",
+    "                            'out_file': './data/wadc18summary.csv'},\n",
+    "             'Chicago': {'in_file': './data/chi18data.csv',\n",
+    "                         'out_file': './data/chi18summary.csv'},\n",
+    "             'NYC': {'in_file': './data/nycbike2018.csv',\n",
+    "                     'out_file': './data/nyc18summary.csv'}}\n",
     "\n",
     "for city, filenames in city_info.items():\n",
     "    condense_data(filenames['in_file'], filenames['out_file'], city)\n",
@@ -812,7 +812,7 @@
     }
    ],
    "source": [
-    "create_histogram('./data/Washington-2018-Summary.csv', \"Frequency\", facet=True, x_facet=None, x_axis_limit=75, n_bins=15)"
+    "create_histogram('./data/wadc18summary.csv', \"Frequency\", facet=True, x_facet=None, x_axis_limit=75, n_bins=15)"
    ]
   },
   {
@@ -883,7 +883,7 @@
     }
    ],
    "source": [
-    "create_histogram('./data/Washington-2018-Summary.csv','Frequency', \n",
+    "create_histogram('./data/wadc18summary.csv','Frequency', \n",
     "                 facet=True, x_facet='month', y_facet='user_type', \n",
     "                 x_axis_limit=75, n_bins=15)"
    ]
@@ -935,7 +935,7 @@
     }
    ],
    "source": [
-    "create_histogram('./data/Washington-2018-Summary.csv', 'Frequency',\n",
+    "create_histogram('./data/wadc18summary.csv', 'Frequency',\n",
     "                 facet=True, x_facet='hour', y_facet='user_type', \n",
     "                 x_axis_limit=75, n_bins=15)"
    ]
@@ -985,7 +985,7 @@
     }
    ],
    "source": [
-    "create_histogram('./data/Washington-2018-Summary.csv', 'Frequency',\n",
+    "create_histogram('./data/wadc18summary.csv', 'Frequency',\n",
     "                 facet=True, x_facet='day_of_week', y_facet='user_type', \n",
     "                 x_axis_limit=75, n_bins=15)"
    ]
@@ -1075,7 +1075,7 @@
     "    return dict_for_df\n",
     "    \n",
     "# Test function\n",
-    "print(calculate_subscriber_ratio('./data/Washington-2018-Summary.csv'))"
+    "print(calculate_subscriber_ratio('./data/wadc18summary.csv'))"
    ]
   },
   {
@@ -1124,7 +1124,7 @@
     }
    ],
    "source": [
-    "newdict = calculate_subscriber_ratio('./data/Washington-2018-Summary.csv')\n",
+    "newdict = calculate_subscriber_ratio('./data/wadc18summary.csv')\n",
     "create_barchart(newdict)"
    ]
   },
